--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -43,6 +44,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.wear.tiles:tiles-material:1.1.0-alpha04'
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
+    implementation 'com.google.firebase:firebase-common-ktx:20.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -80,4 +83,14 @@ dependencies {
 
     // google vision
     implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.1.0'
+
+    // fire base
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+
+    //  retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
